# ChrisB_Blog

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PROJECT_NOTES.md  QUICKSTART.md  STRUCTURE.json  manage.py  pyproject.toml  railway.toml  start.sh  tasks.json
.Assets/: About _ ChrisB's Blog.html  ChrisB's Blog _ Spurious commentary from a curious commentator.html  Five Generations, One Betrayal _ ChrisB's Blog.html  chrisb039sblog.WordPress.2026-01-28.xml
analytics/: middleware.py  models.py
analytics/migrations/: 0001_initial.py
blog/: admin.py  context_processors.py  feeds.py  models.py  urls.py  views.py
blog/management/commands/: add_wp_featured_images.py
blog/migrations/: 0001_initial.py
chrisb_blog/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
editor/: forms.py  urls.py  views.py
imagen/: services.py  tasks.py  urls.py  views.py
scripts/: download_images.py  extract_featured_images.py  migrate_wordpress.py
static/css/: style.css
templates/: 404.html  base.html
templates/blog/: about.html  home.html  post_detail.html  search.html  tag_detail.html  tag_list.html
templates/components/: comment.html  featured_image.html  generation_error.html  generation_started.html  image_item.html  image_select_modal.html  post_deleted.html  post_list.html  post_list_item.html  post_saved.html  preview.html  search_results.html  share_buttons.html  task_status.html
templates/editor/: dashboard.html  image_manager.html  post_form.html
templates/imagen/: generator.html
