[project]
name = "chrisb-blog"
version = "0.1.0"
description = "ChrisB Blog - Self-hosted Python blog"
authors = [
    {name = "Chris Bland"}
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "django-redis>=5.4",
    "celery[redis]>=5.3",
    "pillow>=10.0",
    "markdown>=3.5",
    "pygments>=2.17",
    "python-dotenv>=1.0",
    "gunicorn>=21.0",
    "whitenoise>=6.6",
    "google-cloud-aiplatform>=1.38",
    "bleach>=6.1",
    "django-htmx>=1.17",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.2",
    "pytest>=7.4",
    "pytest-django>=4.5",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "chrisb_blog"}]
